Redo how we lock and structure the builds
We used to just lock on the project property, but now that things
can come from various places that is not reliable anymore, so we need
a new approach.

We create something called a build-id, which is normally just the
appid, but in the case of a versioned thing like a runtime we append
the known version with an @ (so "org.gnome.gedit" and
"org.kde.Sdk@5.9").  We then use this instead of the app id to name
the builder work dir.  However, we only want one thing using the work
dir at a time, so we need some locks.

Unfortunately the build-id is not known at the point of the build for
the entire thing, so we cannot just use it instead of project in the
current code.

So, instead we take the lock on the worker side, when actually
building this, because at this time the build id is known. This
additonally allows some more parallelization, in case we have multiple
changes to the same build-id in the queue.

This is nice, but it brings complications with handling the build
result, because that used to be scoped by the app id only. Instead
we now scope it by the build-number of the main build job.

--- a/master.cfg
+++ b/master.cfg
@@ -39,6 +39,10 @@ flathub_github_auth_secret = getConfig('github-auth-secret')
 flathub_github_change_secret = getConfig('github-change-secret')
 flathub_github_status_token = getConfig('github-status-token')
 
+# Tracks the last build number that was used to update the repo for a particular build-id
+# So we avoid going backwards if the builds finish in the wrong order
+flathub_build_latest_update = {}
+
 f = open('builders.json', 'r')
 worker_config = utils.json_to_ascii(json.loads(f.read ()))
 
@@ -217,25 +221,24 @@ c['collapseRequests'] = False
 
 ####### Custom builders
 
-# This is a build class that automatically takes a per-project lock
-# which means only one build of a repo can be outstanding at a time
-class ProjectLockBuild(Build):
-    _masterLocks = {}
+# We create one worker lock per build-id, which is the same as the workdir
+# so multiple builds never work in the same workdir on any particular worker
+class BuildIDLockBuild(Build):
+    _workerLocks = {}
 
     @staticmethod
-    def find_or_create_master_lock_for_project(project):
-        lock = ProjectLockBuild._masterLocks.get(project)
+    def find_or_create_master_lock_for_buildid(buildid):
+        lock = BuildIDLockBuild._workerLocks.get(buildid)
         if lock is None:
-            log.msg("********* Created lock for project %s" % project)
-            lock = locks.MasterLock(project + ' project')
-            ProjectLockBuild._masterLocks[project] = lock
+            log.msg("********* Created lock for buildid %s" % buildid)
+            lock = locks.WorkerLock(buildid + ' buildid lock')
+            BuildIDLockBuild._workerLocks[buildid] = lock
         return lock
 
     def startBuild(self, build_status, workerforbuilder):
-        if self.sources and len(self.sources) == 1:
-            project = self.sources[0].project
-            lock = ProjectLockBuild.find_or_create_master_lock_for_project(project)
-            self.setLocks([lock.access('exclusive')])
+        buildid = self.getProperty('flathub-build-id')
+        lock = BuildIDLockBuild.find_or_create_master_lock_for_buildid(buildid)
+        self.setLocks([lock.access('exclusive')])
         return Build.startBuild(self, build_status, workerforbuilder)
 
 ####### BUILDERS
@@ -311,7 +314,8 @@ def shellArg(commands):
 
 def create_build_factory():
     build_factory = util.BuildFactory()
-    build_factory.workdir = util.Property('flathub-id')
+    build_factory.buildClass = BuildIDLockBuild
+    build_factory.workdir = util.Property('flathub-build-id')
     build_factory.addSteps([
         steps.Git(name="checkout manifest",
                   repourl=util.Property('repository'),
@@ -378,7 +382,7 @@ def create_build_factory():
                          haltOnFailure=True,
                          doStepIf=BuildIsOfficial,
                          hideStepIf=hide_on_skipped,
-                         masterdest=util.Interpolate('builds/%(prop:flathub-id)s-%(prop:revision)s/%(prop:flathub-arch)s-repo.tar'),
+                         masterdest=util.Interpolate('%(prop:flathub-artifact-dir)s/%(prop:flathub-arch)s-repo.tar'),
                          blocksize=64*1024),
         steps.ShellCommand(name='clean up',
                            alwaysRun=True,
@@ -390,7 +394,7 @@ update_repo_factory = util.BuildFactory()
 update_repo_factory.addStep(steps.ShellCommand(name='clean old repo', command=['rm', '-rf', 'repo']))
 for arch in flathub_arches:
     update_repo_factory.addStep(steps.FileDownload(name='download ' + arch + ' build result',
-                                                   mastersrc=util.Interpolate('builds/%(prop:flathub-id)s-%(prop:revision)s/'+arch+'-repo.tar'),
+                                                   mastersrc=util.Interpolate('%(prop:flathub-artifact-dir)s/'+arch+'-repo.tar'),
                                                    workerdest=arch+'-repo.tar',
                                                    blocksize=64*1024))
 extract_commands = []
@@ -403,7 +407,7 @@ update_repo_factory.addStep(steps.ShellSequence(name='Extract build results',
 
 update_repo_factory.addSteps([
     steps.MasterShellCommand(name='remove build results from master',
-                             command=['rm', '-rf', util.Interpolate('builds/%(prop:flathub-id)s-%(prop:revision)s')],
+                             command=['rm', '-rf', util.Interpolate('%(prop:flathub-artifact-dir)s')],
                              alwaysRun=True),
     steps.ShellSequence(name='Check and prepare repo',
                         commands=[
@@ -455,6 +459,7 @@ def asciiBasename(s):
 
 @util.renderer
 def computeBuildProperties(props):
+    buildnumber = props.getProperty('buildnumber')
     orig_reason = props.getProperty('reason')
     repository = props.getProperty('repository')
     branch = props.getProperty('branch')
@@ -467,29 +472,40 @@ def computeBuildProperties(props):
         forced_id = project[len("forced-build-id/"):]
     data = builds.lookup_by_git(repository, branch, forced_id)
     if data.fp_branch:
-        reason = "%s/%s" % (data.id, data.fp_branch)
+        buildid = "%s@%s" % (data.id, data.fp_branch)
+        builddesc = "%s %s" % (data.id, data.fp_branch)
     else:
-        reason = data.id
+        buildid = data.id
+        builddesc = data.id
+
     return {
         "flathub-id": data.id,
+        "flathub-build-id": buildid,
+        "flathub-buildnumber": buildnumber,
         "flathub-manifest": data.get_manifest(),
         "flathub-branch": data.fp_branch,
         "flathub-official-build": data.official,
-        "reason": reason,
+        "flathub-artifact-dir": "builds/%s-%s" % (buildid, buildnumber),
+        "reason": builddesc,
         "orig-reason": orig_reason
     }
 
+def ShouldUpdateRepo(step):
+    if not BuildIsOfficial(step):
+        return False
+    buildid = step.build.getProperty ('flathub-build-id', "")
+    buildnumber = step.build.getProperty ('flathub-buildnumber', 0)
+    last_update = flathub_build_latest_update.get(buildid, 0)
+    if buildnumber >= last_update:
+        flathub_build_latest_update[buildid] = buildnumber
+        return True
+    return False
+
 build_app_factory = util.BuildFactory()
-build_app_factory.buildClass = ProjectLockBuild
 build_app_factory.addSteps([
     steps.SetProperties(name="Set flathub properties",
                         hideStepIf=hide_on_success,
                         properties=computeBuildProperties),
-    steps.MasterShellCommand(name="Clean up storage on master",
-                             hideStepIf=hide_on_success_or_skipped,
-                             doStepIf=BuildIsOfficial,
-                             haltOnFailure=True,
-                             command=['rm', '-rf', util.Interpolate('builds/%(prop:flathub-id)s-%(prop:revision)s')]),
     steps.Trigger(name='Build all platforms',
                   haltOnFailure=True,
                   schedulerNames=['build-all-platforms'],
@@ -497,6 +513,9 @@ build_app_factory.addSteps([
                   waitForFinish=True,
                   set_properties={
                       'flathub-id' : util.Property('flathub-id'),
+                      'flathub-build-id' : util.Property('flathub-build-id'),
+                      'flathub-buildnumber' : util.Property('flathub-buildnumber'),
+                      'flathub-artifact-dir' : util.Property('flathub-artifact-dir'),
                       'flathub-manifest' : util.Property('flathub-manifest'),
                       'flathub-branch' : util.Property('flathub-branch'),
                       'flathub-official-build' : util.Property('flathub-official-build'),
@@ -504,18 +523,27 @@ build_app_factory.addSteps([
                   }),
     steps.Trigger(name='Update repository',
                   haltOnFailure=True,
-                  doStepIf=BuildIsOfficial,
+                  doStepIf=ShouldUpdateRepo,
                   hideStepIf=hide_on_skipped,
                   schedulerNames=['update-repo'],
                   updateSourceStamp=True,
                   waitForFinish=True,
                   set_properties={
                       'flathub-id' : util.Property('flathub-id'),
+                      'flathub-build-id' : util.Property('flathub-build-id'),
+                      'flathub-buildnumber' : util.Property('flathub-buildnumber'),
+                      'flathub-artifact-dir' : util.Property('flathub-artifact-dir'),
                       'flathub-manifest' : util.Property('flathub-manifest'),
                       'flathub-branch' : util.Property('flathub-branch'),
                       'flathub-official-build' : util.Property('flathub-official-build'),
                       'reason' : util.Property('reason')
-                  })
+                  }),
+    steps.MasterShellCommand(name="Clean up storage on master",
+                             alwaysRun=True,
+                             hideStepIf=hide_on_success_or_skipped,
+                             doStepIf=BuildIsOfficial,
+                             haltOnFailure=True,
+                             command=['rm', '-rf', util.Interpolate('%(prop:flathub-artifact-dir)s')])
 ])
 
 c['builders'] = []
