Appstream check: Look in both builddir/usr or builddir/files
This allows us to build runtime too

--- a/master.cfg
+++ b/master.cfg
@@ -361,7 +361,7 @@ def create_build_factory():
                     name='Check for AppStream xml',
                     doStepIf=lambda step: not step.build.getProperty('flathub-config', {}).get("skip-appstream-check"),
                     haltOnFailure=True,
-                    command=['stat', util.Interpolate('builddir/files/share/app-info/xmls/%(prop:flathub-id)s.xml.gz')]),
+                    command=util.Interpolate('stat builddir/*/share/app-info/xmls/%(prop:flathub-id)s.xml.gz')),
                 steps.ShellCommand(
                     name='Check that the right branch was built',
                     haltOnFailure=True,
