Clean import-repo during repo-update

--- a/master.cfg
+++ b/master.cfg
@@ -391,7 +391,7 @@ def create_build_factory():
     return build_factory
 
 update_repo_factory = util.BuildFactory()
-update_repo_factory.addStep(steps.ShellCommand(name='clean old repo', command=['rm', '-rf', 'repo']))
+update_repo_factory.addStep(steps.ShellCommand(name='clean old repo', command=['rm', '-rf', 'repo', 'import-repo']))
 for arch in flathub_arches:
     update_repo_factory.addStep(steps.FileDownload(name='download ' + arch + ' build result',
                                                    mastersrc=util.Interpolate('%(prop:flathub-artifact-dir)s/'+arch+'-repo.tar'),
@@ -451,7 +451,8 @@ update_repo_factory.addSteps([
                         ]),
     steps.ShellCommand(name='Update the repo and generate deltas',
                        command=['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path],
-                       locks=[repo_lock.access('exclusive')])
+                       locks=[repo_lock.access('exclusive')]),
+    steps.ShellCommand(name='clean up', command=['rm', '-rf', 'repo', 'import-repo'])
     ])
 
 def asciiBasename(s):
