Don't constantly log the environment for every command

--- a/master.cfg
+++ b/master.cfg
@@ -332,6 +332,7 @@ def create_build_factory():
                 steps.ShellSequence(
                     name='Prepare for build',
                     haltOnFailure=True,
+                    logEnviron=False,
                     commands=[
                         shellArg(['mkdir', '-p', 'repo/screenshots']),
                         shellArg(['rm', '-rf', 'parent-repo', 'repo', 'repo.tar']),
@@ -351,6 +352,7 @@ def create_build_factory():
                 steps.ShellCommand(
                     name='Build',
                     haltOnFailure=True,
+                    logEnviron=False,
                     command=['flatpak-builder', '-v', '--force-clean', '--sandbox', '--delete-build-dirs',
                              '--user', '--install-deps-from=flathub',
                              util.Property('extra-fb-args'), '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
@@ -361,6 +363,7 @@ def create_build_factory():
                     name='Check for AppStream xml',
                     doStepIf=lambda step: not step.build.getProperty('flathub-config', {}).get("skip-appstream-check"),
                     haltOnFailure=True,
+                    logEnviron=False,
                     command=util.Interpolate('stat builddir/*/share/app-info/xmls/%(prop:flathub-id)s.xml.gz')),
                 steps.ShellCommand(
                     name='Check that the right branch was built',
@@ -368,6 +371,7 @@ def create_build_factory():
                     command=util.Interpolate('test ! -d repo/refs/heads/app -o -f repo/refs/heads/app/%(prop:flathub-id)s/%(prop:flathub-arch)s/' + flathub_branch)),
                 steps.ShellSequence(
                     name='Post-build work',
+                    logEnviron=False,
                     commands=[
                         # Copy screenshots
                         shellArg(['cp', '-r', 'builddir/screenshots', 'repo/'])
@@ -377,6 +381,7 @@ def create_build_factory():
                            haltOnFailure=True,
                            doStepIf=BuildIsOfficial,
                            hideStepIf=hide_on_skipped,
+                           logEnviron=False,
                            command=['tar', 'cf', 'repo.tar', 'repo']),
         steps.FileUpload(workersrc='repo.tar',
                          haltOnFailure=True,
@@ -386,12 +391,15 @@ def create_build_factory():
                          blocksize=64*1024),
         steps.ShellCommand(name='clean up',
                            alwaysRun=True,
+                           logEnviron=False,
                            command=['rm', '-rf', '.flatpak-builder/build', 'builddir', 'repo', 'repo.tar'])
     ])
     return build_factory
 
 update_repo_factory = util.BuildFactory()
-update_repo_factory.addStep(steps.ShellCommand(name='clean old repo', command=['rm', '-rf', 'repo', 'import-repo']))
+update_repo_factory.addStep(steps.ShellCommand(name='clean old repo',
+                                               logEnviron=False,
+                                               command=['rm', '-rf', 'repo', 'import-repo']))
 for arch in flathub_arches:
     update_repo_factory.addStep(steps.FileDownload(name='download ' + arch + ' build result',
                                                    mastersrc=util.Interpolate('%(prop:flathub-artifact-dir)s/'+arch+'-repo.tar'),
@@ -403,6 +411,7 @@ for arch in flathub_arches:
     extract_commands.append(shellArg(['rm', arch+'-repo.tar']))
 
 update_repo_factory.addStep(steps.ShellSequence(name='Extract build results',
+                                                logEnviron=False,
                                                 commands=extract_commands))
 
 update_repo_factory.addSteps([
@@ -410,6 +419,7 @@ update_repo_factory.addSteps([
                              command=['rm', '-rf', util.Interpolate('%(prop:flathub-artifact-dir)s')],
                              alwaysRun=True),
     steps.ShellSequence(name='Check and prepare repo',
+                        logEnviron=False,
                         commands=[
         # Fsck repo we got from builders
         shellArg(['ostree', '--repo=repo', 'fsck']),
@@ -422,6 +432,7 @@ update_repo_factory.addSteps([
         shellArg(['chmod', '-R', 'a+rX', 'import-repo'])
                             ]),
     steps.ShellSequence(name='Merge to main repo',
+                        logEnviron=False,
                         locks=[repo_lock.access('exclusive')],
                         commands=[
         # rsync objects and deltas
@@ -447,9 +458,12 @@ update_repo_factory.addSteps([
                   'import-repo/', flathub_upstream_repo_path + '/'])
                         ]),
     steps.ShellCommand(name='Update the repo and generate deltas',
+                       logEnviron=False,
                        command=['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path],
                        locks=[repo_lock.access('exclusive')]),
-    steps.ShellCommand(name='clean up', command=['rm', '-rf', 'repo', 'import-repo'])
+    steps.ShellCommand(name='clean up',
+                       logEnviron=False,
+                       command=['rm', '-rf', 'repo', 'import-repo'])
     ])
 
 def asciiBasename(s):
