Add shellArgFatal helper
This avoids some duplicated code

--- a/master.cfg
+++ b/master.cfg
@@ -312,6 +312,9 @@ class MaybeAddSteps(steps.BuildStep):
 def shellArg(commands):
     return util.ShellArg(logfile='stdio', command=commands)
 
+def shellArgFatal(commands):
+    return util.ShellArg(logfile='stdio', haltOnFailure=True, command=commands)
+
 def create_build_factory():
     build_factory = util.BuildFactory()
     build_factory.buildClass = BuildIDLockBuild
@@ -338,16 +341,12 @@ def create_build_factory():
                         shellArg(['rm', '-rf', 'parent-repo', 'repo', 'repo.tar']),
                         shellArg(['ostree', '--repo=repo', '--mode=archive-z2', 'init']),
                         # Add flathub remote
-                        util.ShellArg(logfile='stdio',  haltOnFailure=True,
-                                      command=['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg',
+                        shellArgFatal(['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg',
                                                'flathub', flathub_upstream_repo]),
                         # Update flathub remote url
-                        util.ShellArg(logfile='stdio', haltOnFailure=True,
-                                      command=['flatpak', '--user', 'remote-modify', '--url='+ flathub_upstream_repo,
-                                               'flathub']),
+                        shellArgFatal(['flatpak', '--user', 'remote-modify', '--url='+ flathub_upstream_repo, 'flathub']),
                         # Clean up rofiles-fuse
-                        util.ShellArg(logfile='stdio', haltOnFailure=True,
-                                      command='for i in .flatpak-builder/rofiles/rofiles-*/; do fusermount -u $i; done || true')
+                        shellArgFatal('for i in .flatpak-builder/rofiles/rofiles-*/; do fusermount -u $i; done || true')
                     ]),
                 steps.ShellCommand(
                     name='Build',
