Make some more steps fatal

--- a/master.cfg
+++ b/master.cfg
@@ -420,16 +420,16 @@ update_repo_factory.addSteps([
     steps.ShellSequence(name='Check and prepare repo',
                         logEnviron=False,
                         commands=[
+        # Ensure files are readable
+        shellArg(['chmod', '-R', 'a+rX', 'repo']),
         # Fsck repo we got from builders
-        shellArg(['ostree', '--repo=repo', 'fsck']),
+        shellArgFatal(['ostree', '--repo=repo', 'fsck']),
         # Create new repo we will import from
         shellArg(['ostree', '--repo=import-repo', '--mode=archive-z2', 'init']),
         shellArg(['ostree', '--repo=import-repo', 'config', 'set', 'core.parent', flathub_upstream_repo_path]),
         # Create signed commits in the import repo
-        shellArg(['flatpak', 'build-commit-from', '--src-repo=repo', '--no-update-summary'] + gpg_args + ["import-repo"]),
-        # Ensure files are readable
-        shellArg(['chmod', '-R', 'a+rX', 'import-repo'])
-                            ]),
+        shellArgFatal(['flatpak', 'build-commit-from', '--src-repo=repo', '--no-update-summary'] + gpg_args + ["import-repo"])
+                        ]),
     steps.ShellSequence(name='Merge to main repo',
                         logEnviron=False,
                         locks=[repo_lock.access('exclusive')],
