Drop the weir rsync magic and use pure ostree operations
pull-local should be at least as safe as rsync, and is way
less magical.

--- a/master.cfg
+++ b/master.cfg
@@ -430,36 +430,14 @@ update_repo_factory.addSteps([
         # Create signed commits in the import repo
         shellArgFatal(['flatpak', 'build-commit-from', '--src-repo=repo', '--no-update-summary'] + gpg_args + ["import-repo"])
                         ]),
-    steps.ShellSequence(name='Merge to main repo',
+    steps.ShellSequence(name='Merge to main repo and update',
                         logEnviron=False,
                         locks=[repo_lock.access('exclusive')],
                         commands=[
-        # rsync objects and deltas
-        shellArg(['rsync', '-rltv', '--ignore-existing',
-                  '--include=/screenshots',
-                  '--include=/screenshots/**',
-                  '--include=/objects',
-                  '--include=/objects/**',
-                  '--include=/deltas',
-                  '--include=/deltas/**',
-                  '--exclude=*',
-                  'import-repo/', flathub_upstream_repo_path + '/']),
-        shellArg(['sync']),
-        # rsync refs, after objects are synced
-        shellArg(['rsync', '-rltv',
-                  '--include=/refs',
-                  '--include=/refs/heads',
-                  '--include=/refs/heads/app',
-                  '--include=/refs/heads/app/**',
-                  '--include=/refs/heads/runtime',
-                  '--include=/refs/heads/runtime/**',
-                  '--exclude=*',
-                  'import-repo/', flathub_upstream_repo_path + '/'])
-                        ]),
-    steps.ShellCommand(name='Update the repo and generate deltas',
-                       logEnviron=False,
-                       command=['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path],
-                       locks=[repo_lock.access('exclusive')]),
+                            shellArg(['rsync', '-rltv', '--ignore-existing',
+                                      'repo/screenshots/', flathub_upstream_repo_path + '/screenshots/']),
+                            shellArgFatal(['ostree', 'pull-local', '-v', '--repo=' + flathub_upstream_repo_path, 'import-repo']),
+                            shellArgFatal(['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path])]),
     steps.ShellCommand(name='clean up',
                        logEnviron=False,
                        command=['rm', '-rf', 'repo', 'import-repo'])
