Make all shellArgs haltOnFailure
We don't really expect them to fail, but if they do, why not abort
instead of doing something bad.

--- a/master.cfg
+++ b/master.cfg
@@ -309,10 +309,10 @@ class MaybeAddSteps(steps.BuildStep):
             self.build.addStepsAfterCurrentStep(self.steps)
         return buildbot.process.results.SUCCESS
 
-def shellArg(commands):
+def shellArgOptional(commands):
     return util.ShellArg(logfile='stdio', command=commands)
 
-def shellArgFatal(commands):
+def shellArg(commands):
     return util.ShellArg(logfile='stdio', haltOnFailure=True, command=commands)
 
 def create_build_factory():
@@ -341,12 +341,12 @@ def create_build_factory():
                         shellArg(['rm', '-rf', 'parent-repo', 'repo', 'repo.tar']),
                         shellArg(['ostree', '--repo=repo', '--mode=archive-z2', 'init']),
                         # Add flathub remote
-                        shellArgFatal(['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg',
+                        shellArg(['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg',
                                                'flathub', flathub_upstream_repo]),
                         # Update flathub remote url
-                        shellArgFatal(['flatpak', '--user', 'remote-modify', '--url='+ flathub_upstream_repo, 'flathub']),
+                        shellArg(['flatpak', '--user', 'remote-modify', '--url='+ flathub_upstream_repo, 'flathub']),
                         # Clean up rofiles-fuse
-                        shellArgFatal('for i in .flatpak-builder/rofiles/rofiles-*/; do fusermount -u $i; done || true')
+                        shellArg('for i in .flatpak-builder/rofiles/rofiles-*/; do fusermount -u $i; done || true')
                     ]),
                 steps.ShellCommand(
                     name='Build',
@@ -423,12 +423,12 @@ update_repo_factory.addSteps([
         # Ensure files are readable
         shellArg(['chmod', '-R', 'a+rX', 'repo']),
         # Fsck repo we got from builders
-        shellArgFatal(['ostree', '--repo=repo', 'fsck']),
+        shellArg(['ostree', '--repo=repo', 'fsck']),
         # Create new repo we will import from
         shellArg(['ostree', '--repo=import-repo', '--mode=archive-z2', 'init']),
         shellArg(['ostree', '--repo=import-repo', 'config', 'set', 'core.parent', flathub_upstream_repo_path]),
         # Create signed commits in the import repo
-        shellArgFatal(['flatpak', 'build-commit-from', '--src-repo=repo', '--no-update-summary'] + gpg_args + ["import-repo"])
+        shellArg(['flatpak', 'build-commit-from', '--src-repo=repo', '--no-update-summary'] + gpg_args + ["import-repo"])
                         ]),
     steps.ShellSequence(name='Merge to main repo and update',
                         logEnviron=False,
@@ -436,8 +436,8 @@ update_repo_factory.addSteps([
                         commands=[
                             shellArg(['rsync', '-rltv', '--ignore-existing',
                                       'repo/screenshots/', flathub_upstream_repo_path + '/screenshots/']),
-                            shellArgFatal(['ostree', 'pull-local', '-v', '--repo=' + flathub_upstream_repo_path, 'import-repo']),
-                            shellArgFatal(['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path])]),
+                            shellArg(['ostree', 'pull-local', '-v', '--repo=' + flathub_upstream_repo_path, 'import-repo']),
+                            shellArg(['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path])]),
     steps.ShellCommand(name='clean up',
                        logEnviron=False,
                        command=['rm', '-rf', 'repo', 'import-repo'])
