Set haldOnFailure on most steps
If any of these fails we should not continue

--- a/master.cfg
+++ b/master.cfg
@@ -329,6 +329,7 @@ def create_build_factory():
             name="Should we build",
             steps=[
                 steps.FileDownload(name='downloading public key',
+                                   haltOnFailure=True,
                                    hideStepIf=hide_on_success,
                                    mastersrc="flathub.gpg",
                                    workerdest="flathub.gpg"),
@@ -397,11 +398,13 @@ def create_build_factory():
 
 update_repo_factory = util.BuildFactory()
 update_repo_factory.addStep(steps.ShellCommand(name='clean old repo',
+                                               haltOnFailure=True,
                                                logEnviron=False,
                                                command=['rm', '-rf', 'repo', 'import-repo']))
 for arch in flathub_arches:
     update_repo_factory.addStep(steps.FileDownload(name='download ' + arch + ' build result',
                                                    mastersrc=util.Interpolate('%(prop:flathub-artifact-dir)s/'+arch+'-repo.tar'),
+                                                   haltOnFailure=True,
                                                    workerdest=arch+'-repo.tar',
                                                    blocksize=512*1024))
 extract_commands = []
@@ -410,6 +413,7 @@ for arch in flathub_arches:
     extract_commands.append(shellArg(['rm', arch+'-repo.tar']))
 
 update_repo_factory.addStep(steps.ShellSequence(name='Extract build results',
+                                                haltOnFailure=True,
                                                 logEnviron=False,
                                                 commands=extract_commands))
 
@@ -419,6 +423,7 @@ update_repo_factory.addSteps([
                              alwaysRun=True),
     steps.ShellSequence(name='Check and prepare repo',
                         logEnviron=False,
+                        haltOnFailure=True,
                         commands=[
         # Ensure files are readable
         shellArg(['chmod', '-R', 'a+rX', 'repo']),
@@ -432,6 +437,7 @@ update_repo_factory.addSteps([
                         ]),
     steps.ShellSequence(name='Merge to main repo and update',
                         logEnviron=False,
+                        haltOnFailure=True,
                         locks=[repo_lock.access('exclusive')],
                         commands=[
                             shellArg(['rsync', '-rltv', '--ignore-existing',
