Add force-test-build option
This lets you try builds even for official locations

--- a/master.cfg
+++ b/master.cfg
@@ -212,7 +212,10 @@ force = schedulers.ForceScheduler(
     properties=[
         util.StringParameter(name="buildname",
                              label="Buildname:",
-                             required=False)
+                             required=False),
+        util.BooleanParameter(name="force-test-build",
+                              label="Force a test build (even for normal location)",
+                              default=False)
     ]
 )
 
@@ -457,6 +460,7 @@ def computeBuildProperties(props):
     buildnumber = props.getProperty('buildnumber')
     orig_reason = props.getProperty('reason')
     repository = props.getProperty('repository')
+    force_test_build = props.getProperty ('force-test-build', False)
     branch = props.getProperty('branch')
     project = props.getProperty('project')
     # When you force a build you can get a different app id than the repo module,
@@ -479,7 +483,7 @@ def computeBuildProperties(props):
         "flathub-buildnumber": buildnumber,
         "flathub-manifest": data.get_manifest(),
         "flathub-branch": data.fp_branch,
-        "flathub-official-build": data.official,
+        "flathub-official-build": data.official and not force_test_build,
         "flathub-artifact-dir": "builds/%s-%s" % (buildid, buildnumber),
         "reason": builddesc,
         "orig-reason": orig_reason
