Add way to force rebuild on just some arches

--- a/master.cfg
+++ b/master.cfg
@@ -137,8 +137,13 @@ checkin = schedulers.AnyBranchScheduler(name="checkin",
                                         treeStableTimer=10,
                                         change_filter=util.ChangeFilter(filter_fn=change_is_official),
                                         builderNames=["Build App"])
+
+@util.renderer
+def computeBuildArches(props):
+    return map(lambda x: "build-" + x, props.getProperty("flathub-arches", []))
+
 build = schedulers.Triggerable(name="build-all-platforms",
-                               builderNames=map(lambda x: "build-" + x, flathub_arches))
+                               builderNames=computeBuildArches)
 update_repo = schedulers.Triggerable(name="update-repo",
                                      builderNames=["update-repo"])
 
@@ -212,6 +217,9 @@ force = schedulers.ForceScheduler(
     properties=[
         util.StringParameter(name="buildname",
                              label="Buildname:",
+                             required=False),
+        util.StringParameter(name="force-arches",
+                             label="Arches: (comma separated)",
                              required=False),
         util.BooleanParameter(name="force-test-build",
                               label="Force a test build (even for normal location)",
@@ -399,28 +407,45 @@ def create_build_factory():
     ])
     return build_factory
 
+class AddArchSteps(steps.BuildStep):
+    parms = steps.BuildStep.parms
+    steps = None
+
+    def __init__(self, **kwargs):
+        for p in self.__class__.parms:
+            if p in kwargs:
+                setattr(self, p, kwargs.pop(p))
+
+        steps.BuildStep.__init__(self, **kwargs)
+
+    def run(self):
+        arches = self.build.getProperty("flathub-arches", [])
+        for arch in arches:
+            self.build.addStepsAfterCurrentStep(
+                [
+                    steps.FileDownload(name='download ' + arch + ' build result',
+                                       mastersrc=util.Interpolate('%(prop:flathub-artifact-dir)s/'+arch+'-repo.tar'),
+                                       haltOnFailure=True,
+                                       workerdest=arch+'-repo.tar',
+                                       blocksize=512*1024),
+                    steps.ShellSequence(name='Extract ' + arch + ' build results',
+                                        haltOnFailure=True,
+                                        logEnviron=False,
+                                        commands=[
+                                            shellArg(['tar', 'xf', arch+'-repo.tar']),
+                                            shellArg(['rm', arch+'-repo.tar'])
+                                        ])
+                ])
+        return buildbot.process.results.SUCCESS
+
+
 update_repo_factory = util.BuildFactory()
-update_repo_factory.addStep(steps.ShellCommand(name='clean old repo',
-                                               haltOnFailure=True,
-                                               logEnviron=False,
-                                               command=['rm', '-rf', 'repo', 'import-repo']))
-for arch in flathub_arches:
-    update_repo_factory.addStep(steps.FileDownload(name='download ' + arch + ' build result',
-                                                   mastersrc=util.Interpolate('%(prop:flathub-artifact-dir)s/'+arch+'-repo.tar'),
-                                                   haltOnFailure=True,
-                                                   workerdest=arch+'-repo.tar',
-                                                   blocksize=512*1024))
-extract_commands = []
-for arch in flathub_arches:
-    extract_commands.append(shellArg(['tar', 'xf', arch+'-repo.tar']))
-    extract_commands.append(shellArg(['rm', arch+'-repo.tar']))
-
-update_repo_factory.addStep(steps.ShellSequence(name='Extract build results',
-                                                haltOnFailure=True,
-                                                logEnviron=False,
-                                                commands=extract_commands))
-
 update_repo_factory.addSteps([
+    steps.ShellCommand(name='clean old repo',
+                       haltOnFailure=True,
+                       logEnviron=False,
+                       command=['rm', '-rf', 'repo', 'import-repo']),
+    AddArchSteps(name="Download results"),
     steps.MasterShellCommand(name='remove build results from master',
                              command=['rm', '-rf', util.Interpolate('%(prop:flathub-artifact-dir)s')],
                              alwaysRun=True),
@@ -477,8 +502,17 @@ def computeBuildProperties(props):
         buildid = data.id
         builddesc = data.id
 
+    arches = flathub_arches
+    force_arches = props.getProperty("force-arches", None)
+    if force_arches:
+        arches_s = set()
+        for arch in force_arches.split(","):
+            arches_s.add(arch.strip().encode('ascii', 'ignore'))
+        arches = list(arches_s)
+
     return {
         "flathub-id": data.id,
+        "flathub-arches": arches,
         "flathub-build-id": buildid,
         "flathub-buildnumber": buildnumber,
         "flathub-manifest": data.get_manifest(),
@@ -512,6 +546,7 @@ build_app_factory.addSteps([
                   waitForFinish=True,
                   set_properties={
                       'flathub-id' : util.Property('flathub-id'),
+                      'flathub-arches' : util.Property('flathub-arches'),
                       'flathub-build-id' : util.Property('flathub-build-id'),
                       'flathub-buildnumber' : util.Property('flathub-buildnumber'),
                       'flathub-artifact-dir' : util.Property('flathub-artifact-dir'),
@@ -529,6 +564,7 @@ build_app_factory.addSteps([
                   waitForFinish=True,
                   set_properties={
                       'flathub-id' : util.Property('flathub-id'),
+                      'flathub-arches' : util.Property('flathub-arches'),
                       'flathub-build-id' : util.Property('flathub-build-id'),
                       'flathub-buildnumber' : util.Property('flathub-buildnumber'),
                       'flathub-artifact-dir' : util.Property('flathub-artifact-dir'),
